--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
-  "name": "loggly",
-  "description": "A client implementation for Loggly cloud Logging-as-a-Service API",
-  "version": "0.3.11",
-  "author": "Nodejitsu Inc. <info@nodejitsu.com>",
-  "maintainers": [
-    "indexzero <charlie@nodejitsu.com>"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "http://github.com/nodejitsu/node-loggly.git"
-  },
-  "keywords": [
-    "cloud computing",
-    "api",
-    "logging",
-    "loggly"
-  ],
-  "dependencies": {
-    "request": "2.9.x",
-    "timespan": "2.x.x"
-  },
-  "devDependencies": {
-    "vows": "0.6.x"
-  },
-  "main": "./lib/loggly",
-  "scripts": {
-    "test": "vows test/*-test.js --spec"
-  },
-  "engines": {
-    "node": ">= 0.4.0"
-  }
+    "name": "loggly",
+    "description": "A client implementation for Loggly cloud Logging-as-a-Service API",
+    "version": "2.0.0",
+    "author": "Nodejitsu Inc. <info@nodejitsu.com>",
+    "maintainers": [
+        "indexzero <charlie@nodejitsu.com>",
+        "dtudury <david.tudury@gmail.com>"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/dtudury/node-loggly"
+    },
+    "keywords": [
+        "cloud computing",
+        "api",
+        "logging",
+        "loggly"
+    ],
+    "dependencies": {
+        "q": "~0.9.6",
+        "lodash": "~1.3.1"
+    },
+    "main": "./lib/loggly",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "engines": {
+        "node": ">= 0.4.0"
+    }
 }
-
